# settings

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  clean-coverage.sh  codecov.yml  conanfile.py  conanfile.txt  generate-coverage.sh  pajadog.pro  settings.pro  test.json
.docker/: Dockerfile.fedora
.github/workflows/: build-linux.yml  build.yml  check-formatting.yml
cmake/: FindPajladaSerialize.cmake  FindPajladaSignals.cmake  PajladaSettingsConfig.cmake.in
dependencies/: rapidjson.pri  signals.pri
examples/: IncludePajladaSettings.cmake
examples/simple/: CMakeLists.txt  main.cpp
files/: .gitignore  channelmanager.json  channels.json  customClass.json  d.channels.json  deserialize-samples.json  in.array_size.json  in.complexmap.json  in.instance.json  in.isequal.json  in.multi.json  in.removenestedsetting.json  in.removenestedsetting.state1.json  in.removenestedsetting.state2.json  in.serialize.bool.false.json  in.serialize.string.json  in.serialize.vector.str.state1.json  in.signal.json  in.symlink.json  in.vector.json  save.symlink-backup.json.bkp-2  save.symlink-normal.json  save.symlink.json  save.symlink.recursive1.json  save.symlink.recursive3.json  test.json  test2.json  test3.json
include/: CMakeLists.txt
include/pajadog/: setting.hpp  settingsmanager.hpp
include/pajlada/: settings.hpp
include/pajlada/settings/: backup.hpp  borrowedsetting.hpp  common.hpp  equal.hpp  error.hpp  exception.hpp  instance-setting.hpp  instance.hpp  internal.hpp  jsonwrapper.hpp  load-error.hpp  loadoptions.hpp  loadresult.hpp  merger.hpp  qt.hpp  rapidjson-helpers.hpp  serialize.hpp  setter.hpp  setting.hpp  settingdata.hpp  settinglistener.hpp  settingmanager.hpp  signalargs.hpp  types.hpp
include/pajlada/settings/detail/: fs.hpp  load-object.hpp  realpath.hpp  rename.hpp
include/test/: catch.hpp  channel.hpp  channelmanager.hpp  class1.hpp  class2.hpp  common.hpp  foo.hpp
scripts/: README.md  docker-build.sh  docker-example.sh  docker-test.sh  docker-xd.sh  install-dependencies-fedora.sh  run-example.sh  run-test.sh  test-in-docker.sh
src/: CMakeLists.txt  catchimplementor.cpp  main.cpp  test-advanced-array.cpp  test-deserialize.cpp  test-exceptions.cpp  test-remove.cpp  test-serialize.cpp  test1.cpp  testhelpers.cpp  testhelpers.hpp
src/pajadog/: setting.cpp  settingsmanager.cpp
src/settings/: backup.cpp  jsonwrapper.cpp  loadresult.cpp  setting.cpp  settingdata.cpp  settingmanager.cpp
src/settings/detail/: realpath.cpp  rename.cpp
src/test/: advanced-array.cpp  bad-instance.cpp  catch.cpp  channel.cpp  class1.cpp  class2.cpp  common.cpp  default.cpp  deserialize.cpp  foo.cpp  instance.cpp  listener.cpp  load.cpp  map.cpp  misc.cpp  remove.cpp  save.cpp  scope.cpp  serialize.cpp  signal.cpp  static.cpp
standalone-test/: settings.json  test  test.pro
standalone-test/xd/: Makefile
tests/: .gitignore  CMakeLists.txt
tests/cmake/: CodeCoverage.cmake
tests/files/: .gitignore  advanced-window-multi.json  advanced-window.json  bad-1.json  channelmanager.json  correct.save.compare_before_save.json  correct.save.save_int.json  expected.removesetting-soft.1.json  expected.removesetting-soft.2.json  expected.removesetting-soft.3.json  expected.serialize.any.vector.any.json  expected.serialize.any.vector.str.json  expected.serialize.int4.json  expected.serialize.vector.misc.json  in.default.resettwo-1.json  in.default.resettwo-2.json  in.default.resettwo-3.json  in.hastemporary.json  in.hastemporary.json.tmp  in.hastemporary.tmpl  in.relative-symlink.json  in.removenestedsetting.json  in.removenestedsetting.state3.json  in.resettodefault.json  in.serialize.any.vector.any.json  in.serialize.any.vector.str.json  in.serialize.bool.json  in.serialize.bool4.json  in.serialize.int4.json  in.serialize.vector.str.json  in.simplemap.json  save.symlink-backup.json  save.symlink.nonexistant.json  save.symlink.recursive2.json  test.json
tests/files/complex/: correct.foo.json  correct.highlights.2.json  correct.highlights.3.json  correct.highlights.4.json  out.foo.json
tests/files/highlights-variant/: correct.1.1.json  correct.1.2.json  correct.1.3.json  correct.1.4.json
tests/files/realpath/: .gitignore  regular-file  symlink-recursive-bar  symlink-recursive-foo  symlink-recursive-self  symlink-to-file-relative
tests/src/: advanced-array.cpp  backup.cpp  bad-instance.cpp  channel.cpp  channel.hpp  channelmanager.hpp  common.cpp  common.hpp  complex.cpp  default.cpp  deserialize.cpp  foo.cpp  highlights-variant.cpp  listener.cpp  load.cpp  main.cpp  map.cpp  misc.cpp  multithread.cpp  option-compare-before-set.cpp  realpath.cpp  remove.cpp  save.cpp  scope.cpp  serialize.cpp  signal.cpp  static.cpp
